--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon --env-file=.env server.js"
+    "dev" : "nodemon --env-file=.env server.js",
+    "test" : "nodemon --env-file=.env server2.js"
   },
   "author": "",
   "license": "ISC",
